fixed spacing of main-heading

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -115,7 +115,11 @@ h1{
   }
 
   .main{
-    margin-top: 9.8em;
+    margin-top: 10.9em;
+  }
+
+  .main-heading{
+    margin-top:1.2em;
   }
 
   .declarations{
